@@ -9,3 +9,6 @@ core 2.1.0 - not released yet
  
 calendar 0.0.1 to 2.0.7 - core 2.0.7 released on 2011-01-17
 	* See release changelog in root
+
+core 2.0.8 - not released yet
+	* Bugfix: file downloads fail with internet explorer and https connection
